[build-system]
requires = ["setuptools>=78.1.1", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "kami-client"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp~=3.10.11",
    "tenacity~=8.5.0",
    "pydantic~=2.8.2",
    "loguru~=0.7.3",
    "bittensor-drand==0.5.0",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "pylint",
    "ruff",
    "pyright"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kami*"]

