[build-system]
requires = ["setuptools>=78.1.1", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "kami-client"
dynamic = ["version"]
description = "Client library for Kami messaging system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "tensorplex-validator", email = "validator@tensorplex.ai" },
  { name = "jarvis8x7b", email = "jarvis@tensorplex.ai" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]
keywords = ["kami", "client", "python"]
dependencies = [
  "aiohttp~=3.10.11",
  "tenacity~=8.5.0",
  "pydantic~=2.8.2",
  "loguru~=0.7.2",
  "bittensor-drand==0.5.0",
  "python-dotenv",
]

[project.optional-dependencies]
dev = ["pylint", "ruff", "pyright"]

[project.urls]
"Homepage" = "https://github.com/tensorplex-labs/kami-client"
"Bug Reports" = "https://github.com/tensorplex-labs/kami-client/issues"
"Source" = "https://github.com/tensorplex-labs/kami-client"

[tool.setuptools.packages.find]
where = ["."]
include = ["kami*"]

[tool.setuptools_scm]
version_scheme = "only-version"
local_scheme = "no-local-version"
tag_regex = "^v(?P<scm_version>\\d+\\.\\d+\\.\\d+)"
